# django-docker-boilerplate

./: README.md  docker-compose.yml  pyproject.toml
config/: celery_config.py  settings.py  urls.py
